完成擷取公車動態資料與所有公車路線資料

--- a/Views/BusDynamic/Index.cshtml
+++ b/Views/BusDynamic/Index.cshtml
@@ -2,16 +2,16 @@
 @{
     ViewBag.Title = "Index";
 }
-<h2>桃園動態公車API抓取</h2>
+<h2>桃園動態公車JSON抓取</h2>
 
-<table class="table" border="1">
+@*<table class="table" border="1">
     @foreach(var item in Model)
     {
-        @*<tr>
+        <tr>
             <td>@item.Azimuth</td>
-        </tr>*@
+        </tr>
     }
-    @*@foreach (var item in Model)
+    @foreach (var item in Model)
     {
         <tr>
             <td>
@@ -69,6 +69,6 @@
                 @Html.DisplayFor(modelItem => item.UpdateTime)
             </td>
         </tr>
-    }*@
-</table>
+    }
+</table>*@
 
